fix: center content on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: 'Inter';
   src: url('./Inter-Regular.woff2') format('woff2'),
@@ -233,10 +237,9 @@ footer a:hover {
   height: auto;
   }
 
-
   #content {
     width: 100%;      
-    max-width: 300px; 
+    max-width: 350px; 
     padding: 1rem;
     margin: 0 auto;
   }
